frame/support/test/tests/pallet_ui/pallet_doc_multiple_args.stderr
error: The `pallet_doc` received an unsupported argument. Supported format: `pallet_doc("PATH")`
 --> tests/pallet_ui/pallet_doc_multiple_args.rs:3:1
  |
3 | #[pallet_doc("A", "B")]
  | ^
